[package]
name = "calsync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytes = "1.10.0"
chrono = "0.4.39"
google-calendar3 = "6.0.0"
hyper = "1.6.0"
hyper-rustls = "0.27.5"
rustls = "0.23.22"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
minicaldav = "0.8.0"
http-body-util = "0.1.2"
chrono-tz = "0.10.1"
rand = "0.8"
