[package]
name = "gcal_pull_view"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
google-calendar3 = "6.0.0"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
minicaldav = "0.8.0"
chrono-tz = "0.10.1"
rand = "0.8"
ureq = "2.12.1"
